--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "dev": "vite",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "chart.js": "^4.4.9",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -22,7 +24,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "vite": "^6.3.2"
   },
   "eslintConfig": {
     "root": true,
